k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
    - name: http
      port: 80
      targetPort: 2424
